--- a/view/musica.html
+++ b/view/musica.html
@@ -15,13 +15,17 @@
     </div>
     <nav id="nav">
         <ul>
-            <li><a href="musica.html">Musica</a></li>
+            <li><a href="musica.html">Música</a></li>
             <li><a href="apuntes.html">Apuntes</a></li>
             <li><a href="indexView.html">Home</a></li>
-            <li><a href="videosB.html">Jotas</a></li>
-            <li><a href="videosT.html">Videos</a></li>
+            <li><a href="jotas.html">Jotas</a></li>
+            <li><a href="videos.html">Videos</a></li>
         </ul>
     </nav>
+    <h2 id="tituloMusica">Música</h2>
+    <div id="barra">
+        <input type="text" id="buscador" onkeyup="buscar()" placeholder="Busca cualquier canción...">   
+    </div>
     <div id="musica">
         <div class="song">
             <div class="songHeader">
@@ -312,5 +316,5 @@
             </div>
 
     </div>
-    
+    <script type="text/javascript" src="/js/musica.js"></script>
 </body>
