--- a/view/indexView.html
+++ b/view/indexView.html
@@ -15,11 +15,11 @@
     </div>
     <nav id="nav">
         <ul>
-            <li><a href="musica.html">Musica</a></li>
+            <li><a href="musica.html">Música</a></li>
             <li><a href="apuntes.html">Apuntes</a></li>
             <li><a href="indexView.html">Home</a></li>
-            <li><a href="videosB.html">Jotas</a></li>
-            <li><a href="videosT.html">Videos</a></li>
+            <li><a href="jotas.html">Jotas</a></li>
+            <li><a href="videos.html">Videos</a></li>
         </ul>
     </nav>
     <div id="mainContent">
