--- a/view/apuntes.html
+++ b/view/apuntes.html
@@ -26,7 +26,7 @@
     <div id="barra">
         <input type="text" id="buscador" onkeyup="buscar()" placeholder="Busca cualquier documento...">   
     </div>
-    <embed src="" id="visor">
+    <iframe src="" id="visor"></iframe>
     <div id="apuntes">
         <div class="docs">
             <h4>Jota de San Antón</h4>
