--- a/view/jotas.html
+++ b/view/jotas.html
@@ -22,5 +22,5 @@
             <li><a href="/view/videos.html">Videos</a></li>
         </ul>
     </nav>
-    <h2>En Desarrollo...</h2>
+    <h2 id="tituloMusica">En Desarrollo...</h2>
 </body>
