--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -262,6 +262,64 @@ body {
 	text-align: center;
 }
 
+/* Videos */
+
+video {
+	border: 1px solid black;
+	border-radius: 10px;
+	height: 50%;
+	width: 80%;
+}
+
+#videos {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: auto;
+	justify-items: center;
+}
+
+.video {
+	border: 1px solid black;
+	border-radius: 20px;
+	padding: 0.6em 1em 1em 1em;
+	margin: 2em 0 0 2em; 
+	background-color: rgb(255, 255, 255);
+	width: 80%;
+	align-items: center;
+	justify-content: center;
+	padding: 1.5em;
+}
+
+.video h4 {
+	margin-top: 0;
+	text-align: center;
+}
+
+.videosButtons {
+	display: flex;
+	justify-content: space-around;
+}
+
+.videosButtons button {
+	background-color: #75d4fa;
+}
+
+#popupVideos {
+	display: none;
+	position: absolute;
+	width: 70%;
+	height: 90%;
+	margin-left: auto;
+	margin-right: auto;
+	left: 0;
+	right: 0;
+	text-align: center;
+	background-color: white;
+	border: solid black 1px;
+	border-radius: 10px;
+	overflow: scroll;
+}
+
 /* Arcana */
 
 article, aside, details, figcaption, figure,
@@ -852,6 +910,11 @@ input, select, textarea {
 				justify-items: center;
 			}
 
+			.videosButtons button {
+				width: 7em;
+				min-width: 0 !important;
+			}
+
 		}
 
 		@media screen and (max-width: 840px) {
@@ -897,6 +960,13 @@ input, select, textarea {
 			#apuntes {
 				display: grid;
 				grid-template-columns: 1fr 1fr 1fr;
+				grid-template-rows: auto;
+				justify-items: center;
+			}
+
+			#videos {
+				display: grid;
+				grid-template-columns: 1fr 1fr;
 				grid-template-rows: auto;
 				justify-items: center;
 			}
@@ -960,6 +1030,18 @@ input, select, textarea {
 				justify-items: center;
 			}
 
+			#videos {
+				display: grid;
+				grid-template-columns: 1fr 1fr;
+				grid-template-rows: auto;
+				justify-items: center;
+			}
+
+			.videosButtons button {
+				width: 7em;
+				min-width: 0 !important;
+			}
+
 		}
 
 
@@ -1013,6 +1095,13 @@ input, select, textarea {
 			}
 
 			#apuntes {
+				display: grid;
+				grid-template-columns: 1fr 1fr;
+				grid-template-rows: auto;
+				justify-items: center;
+			}
+
+			#videos {
 				display: grid;
 				grid-template-columns: 1fr 1fr;
 				grid-template-rows: auto;
@@ -3215,7 +3304,7 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: #008160;
+			background-color: #5294ad;
 			color: #fff !important;
 		}
 
@@ -3224,7 +3313,7 @@ input, select, textarea {
 		input[type="button"]:active,
 		button:active,
 		.button:active {
-			background-color: #008160;
+			background-color: #5294ad;
 			color: #fff;
 		}
 
