--- a/view/jotas.html
+++ b/view/jotas.html
@@ -19,7 +19,7 @@
             <li><a href="/view/apuntes.html">Apuntes</a></li>
             <li><a href="/view/indexView.html">Home</a></li>
             <li><a href="/view/jotas.html">Jotas</a></li>
-            <li><a href="/view/videos.html">Videos</a></li>
+            <li><a href="/controller/videosController.php">Videos</a></li>
         </ul>
     </nav>
     <h2 id="tituloMusica">En Desarrollo ...</h2>
