--- a/view/apuntes.html
+++ b/view/apuntes.html
@@ -92,6 +92,11 @@
             <a onclick="mostrar(this)"><i class="fas fa-eye"></i></a>
             <a href="/apuntes/Jota del Postiguet.pdf" download="Jota_Postiguet.pdf"><i class="fas fa-download"></i></a> 
         </div>
+        <div class="docs">
+            <h4>Bolero Pla de Xàtiva</h4>
+            <a onclick="mostrar(this)"><i class="fas fa-eye"></i></a>
+            <a href="/apuntes/Bolero Pla de Xativa.pdf" download="Bolero_Pla_Xativa.pdf"><i class="fas fa-download"></i></a> 
+        </div>
     </div>
 
     <div id="footer">
