cambio color boton

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3297,7 +3297,7 @@ input, select, textarea {
 		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
 		background-image: -ms-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
 		background-image: linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
-		background-color: #699f76;
+		background-color: #75d4fa;
 		border-radius: 5px;
 		border: 0;
 		color: #fff;
