--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -311,13 +311,14 @@ video {
 
 #popupVideos {
 	display: none;
-	position: absolute;
+	position: fixed;
 	width: 70%;
 	height: 90%;
 	margin-left: auto;
 	margin-right: auto;
 	left: 0;
 	right: 0;
+	top: 20;
 	text-align: center;
 	background-color: white;
 	border: solid black 1px;
