Se redfine el estilo de nuevo

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -326,6 +326,11 @@ video {
 	overflow: scroll;
 }
 
+#videoAlboroque {
+	display: block;
+	text-align: center;
+}
+
 .videoAlboroqueDiv {
 	width: 100%;
 }
