Se ajusta el tamaño de los videos y se añade uno nuevo

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -326,7 +326,7 @@ video {
 	overflow: scroll;
 }
 
-#videoAlboroque {
+.videoAlboroque {
 	display: block;
 	text-align: center;
 }
@@ -341,7 +341,7 @@ video {
 }
 
 .videosAlboroque {
-	width: 90%;
+	width: 50%;
 	height: auto;
 }
 
