Se ajusta el tamaño del video en los moviles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1071,6 +1071,11 @@ input, select, textarea {
 				min-width: 0 !important;
 			}
 
+			.videosAlboroque {
+				width: 100%;
+				height: auto;
+			}
+
 		}
 
 
