--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -326,7 +326,7 @@ video {
 	overflow: scroll;
 }
 
-.videoDiv iframe{
+#popupVideos #tipoVideo div.videoDiv iframe{
 	border: 1px solid black;
 	border-radius: 5%;
 	margin: 1em 0;
